CHANGELOG

2.0.59
UTIl:
* type=html-merger | introduce argument exportcsv=filename.xslx

BUGFIX:

GENERAL:


2.0.58 (20220908)
UTIL:
* type=rule - improve filters for CI/CD
* type=rule ruletype=any | introduce all filter/actions related to schedule for DoS/Pbf/Qos Rules
* type=rule | introduce ruletype=defaultsecurity
* type=device - extend all parts DG/template / template-stack with config-size information
* type=config-size - optimise output
* type=rule | extend 'filter=(secprof ......)' for ryletype=defaultsecurity
* type=rule | introduce ruletype=sdwan,networkpacketbroker

BUGFIX:
* type=rule/schedule | bugfix for is.expired
* type=rule | actions=securityprofile... - fix to support DefaultSecurityRule
* type=xml-issue | bugfix for Zone
* type=rule ruletype=defaultsecurity | bugfix for actions=exporttoexcel

GENERAL:
* introduce class DefaultSecurityRule - extend on all parts
* extend usage of DefaultSecurityRule to class Container/DeviceCloud/DeviceOnPrem
* class DefaultSecurityRules - skip reading source/destination/from/to
* pan_php_framework - optimise method convert()
* class AddressStore | loop dependencies error with more details
* introduce GTP/SCEP/PacketBroker/SDWAN-ErrorCorrection/-PathQuality/-SaasQuality/-TrafficDistribution Classes
* introduce Profile DataObjects Class


2.0.57 (20220905)
UTIL:
* type=rule | introduce new 'filter=(uuid eq 1234567890)'
* type=rule | introduce 'actions=name-rename:$$current.name$$-$$uuid$$'
* type=stats | improvement to get exportcsv=file.csv working for argument location
* type=ALL - introduce optional argument for location=DGname:includeChildDgs / location=DGname:excludeMainDg
* type=ALL - introduce again argument shadow-apikeyhidden

BUGFIX:
* type=address/service | fix for actions=name-rename - to skip if string length > 63
* type=address actions=value-host-object-add-netmask-m32 | skip if IPv6 address
* type=playbook | skip creating out file for usage of html-merger